--- a/index.html
+++ b/index.html
@@ -4,9 +4,80 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Humans Foundation</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Aboreto&family=Poppins:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <p>alu khabi???</p>
+    <div class="header">
+        <h1>Give Your Helping <br> Hands Towards Them</h1>
+        <p> <b> Today, 690 million people around the world will go <br> to bed on an empty stomach. But your gift means <br> that one less child will be at risk of starvation tonight.</b></p>
+        <h3>Donate</h3>
+    </div>
+    <div class="donate">
+        <h1>
+            Donate Today
+        </h1>
+        <p> <b> Today, 690 million people around the world will go  to bed on an empty stomach. But your gift means <br> that one less child will be at risk of starvation tonight.</b></p>
+        <div class="amount">
+            <h3>100TK</h3>
+            <h3 id="200" >200TK</h3>
+            <h3>500TK</h3>
+            <h3>1000TK</h3>
+            <h3>2000TK</h3>
+        </div>
+        <h5>Other Amount (Tk)</h5>
+        <h4>Donate</h4>
+    </div>
+    <div class="plan" >
+        <h1>Our Donation Plans</h1>
+        <p>As soon as you complete your donation, your gift will start its journey. <br> First your money will be turned into food, and then sent to one of the over 80 countries where people are most vulnerable.</p>
+        <div class="plans">
+            <div class="option">
+                <img src="images/food.png" alt="">
+                <h4>
+                    Food for a family
+                </h4>
+                <p>
+                    From your donation a family <br> might have a proper food. <br> Help as much as you can
+                    
+                </p>
+            </div>
+            <div class="option"><img src="images/shelter.png" alt="">
+                <h4>
+                    Shelter for a family
+                </h4>
+                <p>
+                    From your donation a family <br> might have a proper shelter. <br> Help as much as you can
+                </p></div>
+            <div class="option"><img src="images/book.png" alt="">
+                <h4>
+                    Education for a child
+                </h4>
+            <p>
+                From your donation a child <br> might have a proper education. <br> Help as much as you can
+            </p></div>
+        </div>
+    </div>
+    <div class="mission">
+        <h1>Our Mission</h1>
+        <div class="part">
+            <img src="images/mission.png" alt="">
+            <p>Our mission is to make sure the donation <br> reaches in every rural inch of the world. <br> And wishing there good,healthy and happy life.</p>
+        </div>
+    </div>
+    <div class="updates">
+        <h1>Get Our Updates</h1>
+        <p>Subscribe our email and get updates and notification regularly.</p>
+        <div class="mail">
+            <input type="email" placeholder="Email"></input>
+            <button>Subscribe</button>
+        </div>
+    </div>
+    <footer>
+        ©all rights reserved||Arshik Hossen Akash||2022
+    </footer>
 </body>
 </html>
